<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="36dip"
        android:text="@string/input_locker_pwd"
        android:textColor="#000"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dip"
        android:orientation="horizontal">

        <TextView style="@style/locker_pwd_box" />

        <TextView
            style="@style/locker_pwd_box"
            android:layout_marginLeft="10dip" />

        <TextView
            style="@style/locker_pwd_box"
            android:layout_marginLeft="10dip" />

        <TextView
            style="@style/locker_pwd_box"
            android:layout_marginLeft="10dip" />
    </LinearLayout>

    <View
        style="@style/grey_horizontal_divider"
        android:layout_marginTop="54dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dip"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_1" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_2" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_3" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_4" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_5" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_6" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_7" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_8" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_c" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_0" />

            <Button
                style="@style/pwd_key_item"
                android:text="@string/_b" />

        </LinearLayout>

    </LinearLayout>

    <View
        style="@style/grey_horizontal_divider"
        android:layout_marginTop="-1dp" />

    <Button
        android:text="取消"
        android:textColor="@color/app_text"
        android:background="@drawable/bg_white_btn"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="18dp" />
</LinearLayout>